--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="sass/main.css" />
     <script src="js/app.js" defer></script>
+    <script src="js/modules/questions.js" defer></script>
     <title>Quiz</title>
   </head>
   <body>
