--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="sass/main.css" />
-    <script src="js/app.js" defer></script>
-    <script src="js/modules/questions.js" defer></script>
+    <script src="js/main.js" type="module" defer></script>
     <title>Quiz</title>
   </head>
   <body>
